--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,6 +2,7 @@
 $primary-color: #fff;
 $secondary-color: #000;
 $box-color: #cccccc;
+$b-transparent: rgb(255, 255, 255, 0.2);
 
 //Breakpoints
 $tablet: 768px;
