--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,263 @@
-/* Error: Can't find stylesheet to import.
- *   ,
- * 1 | @use "/scss/variables";
- *   | ^^^^^^^^^^^^^^^^^^^^^^
- *   '
- *   scss\mixins\_mixin.scss 1:1  @use
- *   scss\_index.scss 3:1         @use
- *   scss\main.scss 1:1           root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a   \2577 \a 1 \2502  @use \"/scss/variables\";\d\a   \2502  ^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   scss\\mixins\\_mixin.scss 1:1  @use\a   scss\\_index.scss 3:1         @use\a   scss\\main.scss 1:1           root stylesheet";
+body {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  font-family: "Times New Roman", Times, arial, serif;
+  overflow-x: hidden;
+  line-height: 1.5rem;
+  scroll-behavior: smooth;
 }
+
+.cover-img {
+  background: url(/assets/negative-space-black-forest-dawn.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  width: 100%;
+  color: #fff;
+  position: relative;
+}
+
+.arrow {
+  position: absolute;
+  bottom: 50px;
+  width: 100%;
+  text-align: center;
+}
+
+.arrow-white::before {
+  background-color: black;
+  border-radius: 50%;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  padding: 2.5rem;
+}
+
+.menu-items {
+  display: inline;
+  text-align: center;
+}
+
+.intro-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 18px;
+  text-align: center;
+  line-height: 2rem;
+}
+
+.contact-wrapper {
+  background-color: #000;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+  padding: 10% 25%;
+}
+@media screen and (min-width: 786px) {
+  .contact-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 30px 40px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contact-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 40px 40px;
+  }
+}
+
+.contact-info {
+  line-height: 1.8rem;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+}
+
+.profile-img {
+  width: 250px;
+  height: auto;
+  border-radius: 50%;
+  box-shadow: 0 6px 50px 0 rgba(0, 0, 0, 0.5);
+}
+
+.team-wrapper {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 1200px) {
+  .team-wrapper {
+    display: grid;
+    grid-template-columns: auto;
+    grid-auto-columns: minmax(200px, auto);
+    grid-gap: 100px;
+    column-gap: 200px;
+    grid-template-areas: "team-tittle team-tittle" "team-member-one team-member-two" "team-member-three team-member-four" "arrow arrow";
+    place-items: center;
+    justify-content: center;
+  }
+}
+
+.t-title {
+  grid-area: team-tittle;
+}
+
+.t-member-one {
+  grid-area: team-member-one;
+}
+
+.t-member-two {
+  grid-area: team-member-two;
+}
+
+.arrow-black {
+  grid-area: arrow;
+}
+
+/*
+  @include mixin.desktop {
+    display: flex;
+    flex-direction: row;
+    align-content: space-between;
+    justify-content: center;
+  }*/
+.icons {
+  padding-right: 20px;
+}
+
+.text-boxes {
+  background-color: #cccccc;
+  width: 250px;
+  height: 100px;
+  border-radius: 5px;
+  padding: 2rem;
+  padding-top: 20px;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (min-width: 786px) {
+  .text-boxes {
+    width: 400px;
+    height: 100px;
+    border-radius: 7px;
+    text-align: center;
+  }
+}
+
+.quote {
+  font-size: 40px;
+}
+
+.arrow-white,
+.arrow-black {
+  font-size: 35px;
+  padding: 30px;
+}
+
+/*
+  Hamburger-menu
+*/
+/*nav-menu*/
+#toggle {
+  display: none;
+}
+
+/*menu botton*/
+.hamburger {
+  position: absolute;
+  right: 5%;
+  margin-left: -2em;
+  width: 2em;
+  height: 45px;
+  z-index: 5;
+}
+
+.hamburger div {
+  position: relative;
+  width: 2em;
+  height: 5px;
+  border-radius: 3px;
+  background-color: white;
+  margin-top: 8px;
+  transition: all 0.3s ease-in-out;
+  /*
+  @include mixin.tablet {
+    display: none;
+  }
+
+  @include mixin.tablet {
+    display: none;
+  }*/
+}
+
+/**
+Nav Styles
+**/
+.nav {
+  position: absolute;
+  width: 100%;
+  height: 200px;
+  background-color: rgba(255, 255, 255, 0.2);
+  top: -100%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+  transform: scale(0);
+}
+
+.nav-wrapper {
+  position: relative;
+  overflow: hidden;
+  overflow-y: auto;
+  height: 100%;
+}
+
+/*
+Animations
+**/
+#toggle:checked + .hamburger .top-bun {
+  transform: rotate(-45deg);
+  margin-top: 25px;
+}
+
+#toggle:checked + .hamburger .bottom-bun {
+  opacity: 0;
+  transform: rotate(45deg);
+}
+
+#toggle:checked + .hamburger .meat {
+  transform: rotate(45deg);
+  margin-top: -7px;
+}
+
+#toggle:checked + .hamburger + .nav {
+  top: 0;
+  transform: scale(1);
+}
+
+/*# sourceMappingURL=main.css.map */
