--- a/scss/mixins/_mixin.scss
+++ b/scss/mixins/_mixin.scss
@@ -13,14 +13,21 @@
   flex-direction: column;
 }
 
+@mixin row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 40px 40px;
+}
+
 @mixin tablet {
-  @media screen and (min-width: 786px) {
+  @media screen and (min-width: variables.$tablet) {
     @content;
   }
 }
 
 @mixin desktop {
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: variables.$desktop) {
     @content;
   }
 }
